--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,12 @@ html {
 
 
 body {
-  margin: 0;
-  background-color: #3D3D33;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+    /* la taille par defaut pas 10px mais 16px */
+    font-size: 1.6rem;
+    background-color: #3D3D33;
+    /* Enlever la marge par défaut appliqué par le navigateur */
+    margin: 0;
+    font-family:'subset'
+
 }
